@@ -22,6 +22,10 @@ EMBEDDING_HEADER_AWS_ACCESS_ID = "X-Embedding-Access-Id"
 EMBEDDING_HEADER_AWS_SECRET_ID = "X-Embedding-Secret-Id"
 EMBEDDING_HEADER_API_KEY = "X-Embedding-Api-Key"
 
+REDACT_ENDING = "..."
+REDACT_CHAR = "*"
+REDACT_ENDING_LENGTH = 3
+
 
 def coerce_token_provider(token: Optional[Union[str, TokenProvider]]) -> TokenProvider:
     if isinstance(token, TokenProvider):
@@ -37,6 +41,32 @@ def coerce_embedding_headers_provider(
         return embedding_api_key
     else:
         return EmbeddingAPIKeyHeaderProvider(embedding_api_key)
+
+
+def redact_secret(secret: str, max_length: int, hide_if_short: bool = True) -> str:
+    """
+    Return a shortened-if-necessary version of a 'secret' string (with ellipsis).
+
+    Args:
+        secret: a secret string to redact
+        max_length: if the secret and the fixed ending exceed this size,
+            shortening takes place.
+        hide_if_short: this controls what to do when the input secret is
+            shorter, i.e. when no shortening takes place.
+            if False, the secret is returned as-is;
+            If True, a masked string is returned of the same length as secret.
+
+    Returns:
+        a 'redacted' form of the secret string as per the rules outlined above.
+    """
+    secret_len = len(secret)
+    if secret_len + REDACT_ENDING_LENGTH > max_length:
+        return secret[: max_length - REDACT_ENDING_LENGTH] + REDACT_ENDING
+    else:
+        if hide_if_short:
+            return REDACT_CHAR * len(secret)
+        else:
+            return secret
 
 
 class TokenProvider(ABC):
@@ -117,7 +147,10 @@ class StaticTokenProvider(TokenProvider):
         self.token = token
 
     def __repr__(self) -> str:
-        return self.token or "(none)"
+        if self.token is None:
+            return "(none)"
+        else:
+            return self.token
 
     def get_token(self) -> Union[str, None]:
         return self.token
@@ -248,7 +281,7 @@ class EmbeddingAPIKeyHeaderProvider(EmbeddingHeadersProvider):
         if self.embedding_api_key is None:
             return f"{self.__class__.__name__}(empty)"
         else:
-            return f'{self.__class__.__name__}("{self.embedding_api_key[:5]}...")'
+            return f'{self.__class__.__name__}("{redact_secret(self.embedding_api_key, 8)}")'
 
     def get_headers(self) -> Dict[str, str]:
         if self.embedding_api_key is not None:
@@ -307,8 +340,8 @@ class AWSEmbeddingHeadersProvider(EmbeddingHeadersProvider):
     def __repr__(self) -> str:
         return (
             f"{self.__class__.__name__}(embedding_access_id="
-            f'"{self.embedding_access_id[:3]}...", '
-            f'embedding_secret_id="{self.embedding_secret_id[:3]}...")'
+            f'"{redact_secret(self.embedding_access_id, 6)}", '
+            f'embedding_secret_id="{redact_secret(self.embedding_secret_id, 6)}")'
         )
 
     def get_headers(self) -> Dict[str, str]:
